--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>অফার Active করুন</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <script src="https://admomin.github.io/240114-OAH-95435/shopdoman.js"></script>
+    <meta name="facebook-domain-verification" content="l1fbk2lble4y6sf87fssbk3aqs62sq" />
+    <script src="https://admomin.github.io/240114-OAH-95435/replaceshop.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LB5RB0QDJR"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap');
